# athlib

./: .gitignore  README.md  coverage_check  dev-requirements.txt  dev_requirements.txt  mkdocs.yml  package-lock.json  package.json  pre-commit.sample  publish.md  pyproject.toml  reminders.txt  reqs_dev.txt  requirements.txt  runtests  runtests.py  setup.py  test_iaaf_score.py  webpack.config.babel.js
athlib/: __init__.py  athlon_score.py  bulgarian_score.py  codes.py  exceptions.py  highjump.py  hungarian_score.py  iaaf_score.py  implements.py  jsondict.py  qkids_score.py  sportshall_score.py  test_json.py  tyrving_score.py  utils.py
docs/: Makefile  index.md  make.bat
js/: .babelrc  .eslintignore  .eslintrc  .eslintrc.js  .gitignore  .npmignore  README.md  iaaf_score.js  index.js  jest.config.js  package-lock.json  package.json  vue.config.js  webpack.config.js
jsold/: iaaf_score.js  index.js
json/: athlete.json  combined_performance.json  competition.json  event.json  metaschema.json  performance.json  race.json
sample-jsons/: athlete.json  athlete_minimal.json  combined_performance.json  combined_performance_minimal.json  competition.json  event.json  event_minimal.json  performance_minimal.json  race_iffleymiles_2016_600mB.json  race_iffleymiles_2016_mileA.json  race_iffleymiles_2016_mileB.json  race_invalid_athlete_internal.json  race_invalid_position.json  race_invalid_result.json
sampledata/: 00README.txt  programme_surreytf_2016.json  results_iffleymiles_2016.json
scripts/: bruteforce.py  codemaps.py  make-patterns-js.py  parse_iaaf_tables.py  (+2 more)
(+456 files in other folders)
